--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
     <div class="container">
       <div class="carrer-headline-wrap">
         <h2 class="heading">Follow our progress</h2>
-        <p class="paragraph-light">The Human Colossus is under construction. Become an early support of our project through our newsletter and chat community.</p>
+        <p class="paragraph-light">The Human Colossus is under construction. Become an early support of our project through our newsletter and Twitter account.</p>
         <a href="https://humancolossus.substack.com/" target="_blank" class="button-2 w-button">Get email updates</a>
       </div>
       <div class="carrer-headline-wrap">
         <h2 class="heading">Read our founding memo</h2>
-        <p class="paragraph-light">Our world is better if more people are builders. How do we get more people to create new things? Our mission is to increase the number of people, under 22, who build.</p>
+        <p class="paragraph-light">Our world is better if more people are builders. Our mission is to increase the number of people, under 22, who build. How do we get more people to create new things?</p>
         <a href="https://depue.notion.site/A-new-collective-f70824e0a9d147fca8e457f781f142a2" target="_blank" class="button-2 depriority w-button">What we&#x27;re about</a>
       </div>
       <div class="carrer-headline-wrap">
