--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container">
       <div class="carrer-headline-wrap">
         <h2 class="heading">Follow our progress</h2>
-        <p class="paragraph-light">The Human Colossus is under construction. Become an early support of our project through our newsletter and Twitter account.</p>
+        <p class="paragraph-light">The Human Colossus is under construction. Become an early supporter of our project through our newsletter and Twitter account.</p>
         <a href="https://humancolossus.substack.com/" target="_blank" class="button-2 w-button">Get email updates</a>
       </div>
       <div class="carrer-headline-wrap">
