--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a href="index.html" aria-current="page" class="logo-link w-nav-brand w--current"><img src="images/The-Human-Colossus.svg" width="300" alt="" class="logo-image"></a>
       <div class="navigation-wrap">
         <nav role="navigation" class="navigation-items w-nav-menu">
-          <a href="https://discord.gg/bX25A39Y" class="navigation-item w-nav-link">community discord</a>
+          <a href="https://discord.gg/srSDg5GXpM" class="navigation-item w-nav-link">community discord</a>
           <a href="https://humancolossus.substack.com/" target="_blank" class="navigation-item w-nav-link">newsletter</a>
           <a href="https://twitter.com/jointhecolossus" class="navigation-item w-nav-link">twitter</a>
         </nav>
